[package]
name = "sw_connector"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = { version = "*" }
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
tokio = { version = "1.13.0", features = ["full"] }
rcgen = "0.10.0"
directories-next = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"