[package]
name = "sw_connector"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "swc_lib"
path = "src/lib.rs"

[dependencies]
quinn = "0.11.*"
tokio = { version = "1.13.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
base64 = "0.22.1"
quinn-proto = "0.11.9"
