[package]
name = "sw_listener"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "swl_lib"
path = "src/lib.rs"

[dependencies]
quinn = "*"
rustls = { version = "*", features = ["quic"] }
tokio = { version = "1.13.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
futures = "0.3.30"
lazy_static = "1.4.0"
openssl = "0.10.64"
reqwest = "0.12.3"
url-escape = "0.1.1"
http = "1.1.0"
log = "0.4.21"
env_logger = "0.11.3"
